trying something new

--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">
-
-<head>
-	<meta charset="utf-8">
+<!-- saved from url=(0032)http://localhost:3000/index.html -->
+<html lang="en" class="sr js"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>a-A-Resources</title>
-	<link href="https://fonts.googleapis.com/css?family=Heebo:400,700|Oxygen:700" rel="stylesheet">
-	<link rel="stylesheet" href="dist/css/style.css">
-	<script src="https://unpkg.com/scrollreveal@4.0.5/dist/scrollreveal.min.js"></script>
-</head>
+	<link href="./a-A-Resources_files/css" rel="stylesheet">
+	<link rel="stylesheet" href="./a-A-Resources_files/style.css">
+	<script src="./a-A-Resources_files/scrollreveal.min.js.download"></script>
+<script src="chrome-extension://mooikfkahbdckldjjndioackbalphokd/assets/prompt.js"></script></head>
 
-<body class="is-boxed has-animations">
+<body class="is-boxed has-animations is-loaded" style="height: 100%;"><script id="__bs_script__">//<![CDATA[
+    document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.13'><\/script>".replace("HOST", location.hostname));
+//]]></script><script async="" src="./a-A-Resources_files/browser-sync-client.js.download"></script>
+
 	<div class="body-wrap boxed-container">
 		<header class="site-header text-light">
 			<div class="container">
 				<div class="site-header-inner">
 					<div class="brand header-brand">
 						<h1 class="m-0">
-							<a href="#">
-								<img class="header-logo-image" src="dist/images/logo.svg" alt="Logo">
+							<a href="http://localhost:3000/index.html#">
+								<img class="header-logo-image" src="./a-A-Resources_files/logo.svg" alt="Logo">
 							</a>
 						</h1>
 					</div>
@@ -31,7 +33,7 @@
 			<section class="hero text-center text-light">
 				<div class="hero-bg"></div>
 				<div class="hero-particles-container">
-					<canvas id="hero-particles"></canvas>
+					<canvas id="hero-particles" width="972" height="213" style="width: 1440px; height: 317px;"></canvas>
 				</div>
 				<div class="container-sm">
 					<div class="hero-inner">
@@ -39,13 +41,12 @@
 							<h1 class="hero-title mt-0">a/A Student Resource Page</h1>
 							<p class="hero-paragraph">Welcome to this website, I really hope it helps</p>
 							<div class="hero-cta">
-								<a class="button button-primary button-wide-mobile"
-									href="./other-pages/index.html">navigate to main page</a>
+								<a class="button button-primary button-wide-mobile" href="http://localhost:3000/other-pages/index.html">navigate to main page</a>
 							</div>
 						</div>
 						<div class="mockup-container">
 							<div class="mockup-bg">
-								<img src="dist/images/iphone-hero-bg.svg" alt="iPhone illustration">
+								<img src="./a-A-Resources_files/iphone-hero-bg.svg" alt="iPhone illustration">
 							</div>
 
 						</div>
@@ -60,12 +61,11 @@
 							<div class="feature-extended">
 								<div class="feature-extended-image">
 									<div class="mockup-bg">
-										<img src="dist/images/iphone-feature-bg-01.svg"
-											alt="iPhone Feature 01 illustration">
+										<img src="./a-A-Resources_files/iphone-feature-bg-01.svg" alt="iPhone Feature 01 illustration">
 									</div>
 
 								</div>
-								<div class="feature-extended-body is-revealing">
+								<div class="feature-extended-body is-revealing" data-sr-id="0" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 0.6s cubic-bezier(0.215, 0.61, 0.355, 1) 0s, transform 0.6s cubic-bezier(0.215, 0.61, 0.355, 1) 0s;">
 									<h3 class="mt-0 mb-16">Student Projects Comming Soon</h3>
 									<p class="m-0">I will be creating a space where anyone who would like can showcase
 										their pet projects... it's gonna take a minute to get to that point tho....</p>
@@ -74,14 +74,13 @@
 							<div class="feature-extended">
 								<div class="feature-extended-image">
 									<div class="mockup-bg">
-										<img src="dist/images/iphone-feature-bg-02.svg"
-											alt="iPhone Feature 02 illustration">
+										<img src="./a-A-Resources_files/iphone-feature-bg-02.svg" alt="iPhone Feature 02 illustration">
 									</div>
 
 								</div>
-								<div class="feature-extended-body is-revealing">
+								<div class="feature-extended-body is-revealing" data-sr-id="2" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 0.6s cubic-bezier(0.215, 0.61, 0.355, 1) 0s, transform 0.6s cubic-bezier(0.215, 0.61, 0.355, 1) 0s;">
 									<ul>
-										<li><a href="https://open.appacademy.io">
+										<li><a href="https://open.appacademy.io/">
 												appacademy.io</a>
 										</li>
 										<li><a href="https://progress.appacademy.io/">
@@ -107,14 +106,14 @@
 								</div>
 							</div>
 <p>If you're a musician and have interest in writing applications for audio production... please do not hesitate to contact me... I cannot wait to combine music with web development but at the moment it's a bit above my paygrade.</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/FL4mAntn4js" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="./a-A-Resources_files/FL4mAntn4js.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
 
-			</section>
+			</div></div></div></section>
 		</main>
 
 		<footer class="site-footer">
 			<div class="footer-particles-container">
-				<canvas id="footer-particles"></canvas>
+				<canvas id="footer-particles" width="972" height="363" style="width: 1440px; height: 539px;"></canvas>
 			</div>
 			<div class="site-footer-top">
 				<section class="cta section text-light">
@@ -125,7 +124,7 @@
 
 								<div class="cta-cta">
 
-									<a class="button button-primary button-wide-mobile" href="./other-pages/page-contact.html">Collaborate</a>
+									<a class="button button-primary button-wide-mobile" href="http://localhost:3000/other-pages/page-contact.html">Collaborate</a>
 								</div>
 							</div>
 						</div>
@@ -136,20 +135,18 @@
 				<div class="container">
 					<div class="site-footer-inner">
 						<div class="brand footer-brand">
-							<a href="#">
-								<img src="dist/images/logo.svg" alt="Venus logo">
+							<a href="http://localhost:3000/index.html#">
+								<img src="./a-A-Resources_files/logo.svg" alt="Venus logo">
 							</a>
 						</div>
 
 						<ul class="footer-social-links list-reset">
 
 							<li>
-								<a href="https://drive.google.com/drive/folders/1U9oCijScsuSJ7uNUV8gSzibTLrmjCjah?usp=sharing"">
+								<a href="https://drive.google.com/drive/folders/1U9oCijScsuSJ7uNUV8gSzibTLrmjCjah?usp=sharing" "="">
 									<span class="screen-reader-text">Google</span>
 									<svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
-										<path
-											d="M7.9 7v2.4H12c-.2 1-1.2 3-4 3-2.4 0-4.3-2-4.3-4.4 0-2.4 2-4.4 4.3-4.4 1.4 0 2.3.6 2.8 1.1l1.9-1.8C11.5 1.7 9.9 1 8 1 4.1 1 1 4.1 1 8s3.1 7 7 7c4 0 6.7-2.8 6.7-6.8 0-.5 0-.8-.1-1.2H7.9z"
-											fill="#FFF" />
+										<path d="M7.9 7v2.4H12c-.2 1-1.2 3-4 3-2.4 0-4.3-2-4.3-4.4 0-2.4 2-4.4 4.3-4.4 1.4 0 2.3.6 2.8 1.1l1.9-1.8C11.5 1.7 9.9 1 8 1 4.1 1 1 4.1 1 8s3.1 7 7 7c4 0 6.7-2.8 6.7-6.8 0-.5 0-.8-.1-1.2H7.9z" fill="#FFF"></path>
 									</svg>
 								</a>
 							</li>
@@ -161,7 +158,8 @@
 		</footer>
 	</div>
 
-	<script src="dist/js/main.min.js"></script>
-</body>
+	<script src="./a-A-Resources_files/main.min.js.download"></script>
 
-</html>
+
+
+</body></html>
