--- a/PUBLIC/index.html
+++ b/PUBLIC/index.html
@@ -215,7 +215,8 @@
           <div class="container">
             <div class="section-title text-center">
               <h3>Topic Overviews</h3>
-              <p> in progress</p>
+              <p> this is where I will accumulate blog posts about web development that are out of the scope of what I
+                am currently learning!</p>
             </div><!-- end title -->
             <!-----------------------------------------------1------------------------------------------------------------>
             <div id="owl-01" class="owl-carousel owl-theme owl-theme-01">
@@ -291,7 +292,8 @@
               <div class="caro-item">
                 <div class="course-box">
                   <div class="image-wrap entry">
-                    <img src="upload/course_03.jpg" alt="" class="img-responsive">
+                    <img src="./other-pages/blog-posts/best-prac-extension-guide/Design-Principles/final-html.JPG"
+                      alt="" class="img-responsive">
                     <div class="magnifier">
                       <a href="./../other-pages/blog-post" title=""><i class="flaticon-add"></i></a>
                     </div>
@@ -397,6 +399,13 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="tagline-message text-center">
+                  <div class="footer" id=overview-pdf>
+                    <h1>week-overview</h1>
+
+
+                    <iframe src="./../Overflow/overview.pdf" width="100%" height="500px">
+                    </iframe>
+                  </div>
                   <h3>
                     The spirit behind making this site:
                   </h3>
@@ -406,17 +415,20 @@
                   <pre id="myCode"></pre>
                   <div style="width: 560px; height: 315px; float: none; clear: both; margin: 2px auto;">
                     <embed src="https://www.youtube-nocookie.com/embed/LiouJsnYytI" wmode="transparent" type="video/mp4"
-                      width="720px" height="720px" allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen
-                      </div>
-                    <!--
+                      width="720px" height="720px" allow="autoplay; encrypted-media; picture-in-picture"
+                      allowfullscreen>
+                  </div>
+                  <!--
                                     jQuery Files -->
-                    <script src="js/jquery.min.js"></script>
-                    <script src="js/bootstrap.min.js"></script>
-                    <script src="js/carousel.js"></script>
-                    <script src="js/animate.js"></script>
-                    <script src="js/custom.js"></script>
-                    <!-- VIDEO BG PLUGINS -->
-                    <script src="js/videobg.js"></script>
+                  <script src="js/jquery.min.js"></script>
+                  <script src="js/bootstrap.min.js"></script>
+                  <script src="js/carousel.js"></script>
+                  <script src="js/animate.js"></script>
+                  <script src="js/custom.js"></script>
+                  <!-- VIDEO BG PLUGINS -->
+                  <script src="js/videobg.js"></script>
+
+
 </body>
 
 </html>
