switched out svg w pngs on landing page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="brand header-brand">
             <h1 class="m-0">
               <a href="#">
-                <img class="header-logo-image" src="./landing-page/dist/images/logo.svg" alt="Logo">
+                <img class="header-logo-image" src="./landing-page/dist/images/logo.png" alt="Logo">
               </a>
             </h1>
           </div>
@@ -45,7 +45,7 @@
             </div>
             <div class="mockup-container">
               <div class="mockup-bg">
-                <img src="./landing-page/dist/images/iphone-hero-bg.svg" alt="img1">
+                <img src="./landing-page/dist/images/iphone-hero-bg.png" alt="img1">
               </div>
 
             </div>
@@ -60,7 +60,7 @@
 							<div class="feature-extended">
 								<div class="feature-extended-image">
 									<div class="mockup-bg">
-										<img src="./landing-page/dist/images/iphone-feature-bg-01.svg"
+										<img src="./landing-page/dist/images/iphone-feature-bg-01.png"
 											alt="iPhone Feature 01 illustration">
 									</div>
 
@@ -74,7 +74,7 @@
 							<div class="feature-extended">
 								<div class="feature-extended-image">
 									<div class="mockup-bg">
-										<img src="./landing-page/dist/images/iphone-feature-bg-02.svg"
+										<img src="./landing-page/dist/images/iphone-feature-bg-02.png"
 											alt="iPhone Feature 02 illustration">
 									</div>
 
@@ -137,18 +137,18 @@
           <div class="site-footer-inner">
             <div class="brand footer-brand">
               <a href="#">
-                <img src="./landing-page/dist/images/logo.svg" alt="logo">
+                <img src="./landing-page/dist/images/logo.png" alt="logo">
               </a>
             </div>
 
             <li>
               <a href="https://drive.google.com/drive/folders/1iGpf5lTYseBTB8bXOxQQIy3BXfXmBInM?usp=sharing">
                 <span class="screen-reader-text">Google Drive Folder</span>
-                <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
+                <png width="16" height="16" xmlns="http://www.w3.org/2000/png">
                   <path
                     d="M7.9 7v2.4H12c-.2 1-1.2 3-4 3-2.4 0-4.3-2-4.3-4.4 0-2.4 2-4.4 4.3-4.4 1.4 0 2.3.6 2.8 1.1l1.9-1.8C11.5 1.7 9.9 1 8 1 4.1 1 1 4.1 1 8s3.1 7 7 7c4 0 6.7-2.8 6.7-6.8 0-.5 0-.8-.1-1.2H7.9z"
                     fill="#FFF" />
-                </svg>
+                </png>
               </a>
             </li>
             </ul>
