--- a/Overflow/Take/blog.html
+++ b/Overflow/Take/blog.html
@@ -14,7 +14,11 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
 
+
 </head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 <body>
 
     <!-- preloader area start -->
