--- a/Overflow/Take/index-3.html
+++ b/Overflow/Take/index-3.html
@@ -15,7 +15,11 @@
     <link rel="stylesheet" href="assets/css/responsive.css">
     <link rel="stylesheet" href="assets/css/color-blue.css">
 
+
 </head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 <body>
 
     <!-- preloader area start -->
