--- a/Overflow/a-A-Resources2.html
+++ b/Overflow/a-A-Resources2.html
@@ -8,7 +8,11 @@
 	<link href="./a-A-Resources_files/css" rel="stylesheet">
 	<link rel="stylesheet" href="./a-A-Resources_files/style.css">
 	<script src="./a-A-Resources_files/scrollreveal.min.js.download"></script>
-<script src="chrome-extension://mooikfkahbdckldjjndioackbalphokd/assets/prompt.js"></script></head>
+<script src="chrome-extension://mooikfkahbdckldjjndioackbalphokd/assets/prompt.js"></script>
+</head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
 <body class="is-boxed has-animations is-loaded" style="height: 100%;"><script id="__bs_script__">//<![CDATA[
     document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.13'><\/script>".replace("HOST", location.hostname));
