--- a/PUBLIC/index.html
+++ b/PUBLIC/index.html
@@ -43,7 +43,11 @@
   <script async defer src="js/custom.js"></script>
   <!-- VIDEO BG PLUGINS -->
   <script async defer src="js/videobg.js"></script>
+
 </head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
 <body>
   <!-- LOADER -->
