--- a/PUBLIC/other-pages/blog-posts/best-prac-extension-guide/js-tools-and-best-prac.html
+++ b/PUBLIC/other-pages/blog-posts/best-prac-extension-guide/js-tools-and-best-prac.html
@@ -15,7 +15,11 @@
       background-image: url("./../../../upload/double-bubble-outline/double-bubble-outline.png")
     }
   </style>
+
 </head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
 <body>
   <p align="center">
