--- a/PUBLIC/other-pages/weeks/html-temp/week-1.html
+++ b/PUBLIC/other-pages/weeks/html-temp/week-1.html
@@ -30,7 +30,11 @@
 
   <head>
 
-  </head>
+  
+</head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
 <body for="html-export">
   <div id="home-link"> <a href="./../../index.html">HOME</a></div>
@@ -473,9 +477,13 @@
       }
     } )
   </script>
+  <div id="home-link2"> <a href="./../../index.html">HOME</a>
+  </div>
 </body>
 
 </html>
+  <div id="home-link2"> <a href="./../../index.html">HOME</a>
+  </div>
 </body>
 
 </html>
