--- a/PUBLIC/other-pages/weeks/html-temp/week-10.html
+++ b/PUBLIC/other-pages/weeks/html-temp/week-10.html
@@ -33,7 +33,11 @@
   <link rel="stylesheet" href="./../../css/font-awesome.min.css">
 
   <link rel="stylesheet" href="./../../css/animate.css">
+
 </head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
 <body>
 
@@ -869,7 +873,11 @@
       /* Please visit the URL below for more information: */
       /*   https://shd101wyy.github.io/markdown-preview-enhanced/#/customize-css */
     </style>
-  </head>
+  
+</head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
   <body for="html-export">
     <div class="mume markdown-preview  ">
@@ -1342,10 +1350,14 @@ WHERE condition;
 
 
 
-  </body>
+    <div id="home-link2"> <a href="./../../index.html">HOME</a>
+  </div>
+</body>
 
   </html>
 
+  <div id="home-link2"> <a href="./../../index.html">HOME</a>
+  </div>
 </body>
 
 </html>
