--- a/PUBLIC/other-pages/weeks/html-temp/week-12.html
+++ b/PUBLIC/other-pages/weeks/html-temp/week-12.html
@@ -225,7 +225,11 @@ code {
 <title>regex-cheatsheet</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 <!-------------------------------------------------------------------------------------->
 
 
@@ -505,6 +509,8 @@ $&amp;	Entire matched string
 </p>
 
 
+  <div id="home-link2"> <a href="./../../index.html">HOME</a>
+  </div>
 </body>
 
 </html>
