--- a/PUBLIC/other-pages/weeks/html-temp/week-2.html
+++ b/PUBLIC/other-pages/weeks/html-temp/week-2.html
@@ -18,7 +18,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
+
 </head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
 <body>
 
@@ -29,6 +33,8 @@
   <iframe height="400px" width="100%" src="https://repl.it/@bgoonz/a-A-Student-Resources-Website-Prototype?lite=true"
     scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true"
     sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+  <div id="home-link2"> <a href="./../../index.html">HOME</a>
+  </div>
 </body>
 
 </html>
