--- a/PUBLIC/other-pages/weeks/solution/your-code/browser.html
+++ b/PUBLIC/other-pages/weeks/solution/your-code/browser.html
@@ -6,7 +6,11 @@
   <title>App Academy File Browser</title>
   <link rel="stylesheet" href="style/main.css">
   <script src="js/main.js"></script>
+
 </head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 <body>
   <header>
     <button id="move-a-file">Move a file</button>
