--- a/PUBLIC/other-pages/weeks/week-10.html
+++ b/PUBLIC/other-pages/weeks/week-10.html
@@ -31,9 +31,13 @@
   <!-- Custom & Default Styles -->
 <link rel="stylesheet" href="./../../css/bootstrap.min.css">
   <link rel="stylesheet" href="./../../css/font-awesome.min.css">
-
+<link rel="stylesheet" href="./../../css/bootstrap-theme.css">
   <link rel="stylesheet" href="./../../css/animate.css">
+
 </head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
 <body>
 
@@ -869,7 +873,11 @@
       /* Please visit the URL below for more information: */
       /*   https://shd101wyy.github.io/markdown-preview-enhanced/#/customize-css */
     </style>
-  </head>
+
+</head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
   <body for="html-export">
     <div class="mume markdown-preview  ">
