--- a/PUBLIC/other-pages/weeks/week-10/sequelize_cheatsheet (1).html
+++ b/PUBLIC/other-pages/weeks/week-10/sequelize_cheatsheet (1).html
@@ -258,7 +258,11 @@ pre[data-line] .line-highlight[data-end]:after {
 /*   https://shd101wyy.github.io/markdown-preview-enhanced/#/customize-css */
 
       </style>
-    </head>
+    
+</head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
     <body for="html-export">
       <div class="mume markdown-preview  ">
       <h1 class="mume-header" id="sequelize-cheatsheet">Sequelize Cheatsheet</h1>
