--- a/PUBLIC/other-pages/weeks/week-12.html
+++ b/PUBLIC/other-pages/weeks/week-12.html
@@ -19,9 +19,13 @@
   <!-- Custom & Default Styles -->
   <link rel="stylesheet" href="./../../css/bootstrap.min.css">
   <link rel="stylesheet" href="./../../css/font-awesome.min.css">
-
+<link rel="stylesheet" href="./../../css/bootstrap-theme.css">
   <link rel="stylesheet" href="./../../css/animate.css">
+
 </head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
 <body>
 
@@ -289,7 +293,11 @@
   <title>regex-cheatsheet</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
+
+</head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
   <body>
 
