--- a/PUBLIC/other-pages/weeks/week-2.html
+++ b/PUBLIC/other-pages/weeks/week-2.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+  <style>
+  html {
+    background: url(./double-bubble-outline/double-bubble-outline/double-bubble-outline.png)
+      no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+</style>
   <link rel="stylesheet"
       href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.4.0/build/styles/default.min.css">
 <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.4.0/build/highlight.min.js"></script>
@@ -13,12 +23,16 @@
   <!-- Custom & Default Styles -->
   <link rel="stylesheet" href="./../../css/bootstrap.min.css">
   <link rel="stylesheet" href="./../../css/font-awesome.min.css">
-
+<link rel="stylesheet" href="./../../css/bootstrap-theme.css">
   <link rel="stylesheet" href="./../../css/animate.css">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
+
 </head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
 <body>
 
