--- a/PUBLIC/other-pages/weeks/week-8.html
+++ b/PUBLIC/other-pages/weeks/week-8.html
@@ -29,8 +29,12 @@
   <link rel="stylesheet" href="./../../css/bootstrap.min.css">
   <link rel="stylesheet" href="./../../css/font-awesome.min.css">
 <link rel="stylesheet" href="./../../css/prettyPhoto.css">
+<link rel="stylesheet" href="./../../css/bootstrap-theme.css">
 
 </head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
 <body>
 
