--- a/PUBLIC/other-pages/weeks/week-8/wk8-quiz.html
+++ b/PUBLIC/other-pages/weeks/week-8/wk8-quiz.html
@@ -20,7 +20,11 @@
   <link rel="stylesheet" href="./../../../css/animate.css">
         <script src="quiz.js"></script>
 
-	</head>
+	
+</head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
 	<body>
             <h2><center>Week 8 Quiz</center></h2>
