--- a/PUBLIC/other-pages/weeks/week-9.html
+++ b/PUBLIC/other-pages/weeks/week-9.html
@@ -17,9 +17,13 @@
   <!-- Custom & Default Styles -->
   <link rel="stylesheet" href="./../../css/bootstrap.min.css">
   <link rel="stylesheet" href="./../../css/font-awesome.min.css">
-
+<link rel="stylesheet" href="./../../css/bootstrap-theme.css">
   <link rel="stylesheet" href="./../../css/animate.css">
+
 </head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
 <body>
   <div id="btn-div-wraper" class="col-sm-4" >
