--- a/PUBLIC/other-pages/weeks/week-9/quiz/wk9-quiz.html
+++ b/PUBLIC/other-pages/weeks/week-9/quiz/wk9-quiz.html
@@ -15,7 +15,11 @@
   <link rel="stylesheet" href="./../../../../css/carousel.css">
   <link rel="stylesheet" href="./../../../../css/animate.css">
   <script src="quiz.js"></script>
+
 </head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
 <body>
   <h2>
