--- a/PUBLIC/other-pages/weeks/week-9/w9-projects/aa-times/index.html
+++ b/PUBLIC/other-pages/weeks/week-9/w9-projects/aa-times/index.html
@@ -9,7 +9,11 @@
     href="https://use.fontawesome.com/releases/v5.0.12/css/all.css">
   <link rel="stylesheet" href="stylesheets/main-styles.css">
   <script src="scripts/event-handling.js"></script>
+
 </head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
 <body>
   <header>
