--- a/PUBLIC/other-pages/weeks/week-9/w9-projects/catstagram/public/index.html
+++ b/PUBLIC/other-pages/weeks/week-9/w9-projects/catstagram/public/index.html
@@ -6,7 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" type="text/css" href="./index.css" />
 	<title>Catstagram</title>
+
 </head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
 <body>
 	<section class="container">
