--- a/PUBLIC/other-pages/weeks/week-9/w9-projects/css-modernize-craigslist-starter/attributes-project.html
+++ b/PUBLIC/other-pages/weeks/week-9/w9-projects/css-modernize-craigslist-starter/attributes-project.html
@@ -18,7 +18,11 @@
         });
       });
     </script>
-  </head>
+  
+</head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
   <body class="homepage en desktop w1024">
     <div class="wrapper">
       <section class="page-container">
