--- a/PUBLIC/page-contact.html
+++ b/PUBLIC/page-contact.html
@@ -39,7 +39,11 @@
         <script src="js/vendor/respond.min.js"></script>
     <![endif]-->
 
+
 </head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
 <body>
 
