--- a/Overflow/Take/assets/fonts/slickd41d.html
+++ b/Overflow/Take/assets/fonts/slickd41d.html
@@ -38,7 +38,11 @@
                 font-family: Arial, Helvetica, sans-serif;
             }
         </style>
-    </head>
+    
+</head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
     <body>
         <span class="headerText">
             https://www.themefie.com        </span>
