--- a/PUBLIC/other-pages/blog-posts/9-thigs-you-should-know-about/What every computer science major should know.html
+++ b/PUBLIC/other-pages/blog-posts/9-thigs-you-should-know-about/What every computer science major should know.html
@@ -17,7 +17,11 @@
       background-image: url("./../../../upload/double-bubble-outline/double-bubble-outline.png")
     }
   </style>
+
 </head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
 <body>
   <div class="workspace-container">
