--- a/PUBLIC/other-pages/blog-posts/best-prac-extension-guide/Design-Principles/HTML-Design-Principles.html
+++ b/PUBLIC/other-pages/blog-posts/best-prac-extension-guide/Design-Principles/HTML-Design-Principles.html
@@ -20,7 +20,11 @@
   <link rel="stylesheet"
     href="file:///c:\Users\bryan\.vscode\extensions\shd101wyy.markdown-preview-enhanced-0.5.13\node_modules\@shd101wyy\mume\dependencies\katex\katex.min.css">
 
+
 </head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
 <body for="html-export">
   <div class="mume markdown-preview  ">
