--- a/PUBLIC/other-pages/weeks/html-temp/week-11.html
+++ b/PUBLIC/other-pages/weeks/html-temp/week-11.html
@@ -19,7 +19,11 @@
   <link rel="stylesheet" href="./../../css/font-awesome.min.css">
 
   <link rel="stylesheet" href="./../../css/animate.css">
+
 </head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
 <body>
 
@@ -30,6 +34,8 @@
         scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true"
         sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
 
+  <div id="home-link2"> <a href="./../../index.html">HOME</a>
+  </div>
 </body>
 
 </html>
