--- a/PUBLIC/other-pages/weeks/html-temp/week-8.html
+++ b/PUBLIC/other-pages/weeks/html-temp/week-8.html
@@ -22,7 +22,11 @@
   <link rel="stylesheet" href="./../../css/bootstrap.min.css">
   <link rel="stylesheet" href="./../../css/font-awesome.min.css">
   <link rel="stylesheet" href="./../../css/prettyPhoto.css">
+
 </head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
 <body>
   <div id="home-link"> <a href="./../../index.html">HOME</a></div>
@@ -419,6 +423,8 @@
   <div id="home-link2"> <a href="./../../index.html">HOME</a>
   </div>
 
+  <div id="home-link2"> <a href="./../../index.html">HOME</a>
+  </div>
 </body>
 
   </html>
