--- a/PUBLIC/other-pages/weeks/html-temp/week-9.html
+++ b/PUBLIC/other-pages/weeks/html-temp/week-9.html
@@ -19,7 +19,11 @@
   <link rel="stylesheet" href="./../../css/font-awesome.min.css">
 
   <link rel="stylesheet" href="./../../css/animate.css">
+
 </head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
 <body>
   <div id="btn-div-wraper" class="col-sm-4" >
@@ -65,6 +69,8 @@
 
 
 
+  <div id="home-link2"> <a href="./../../index.html">HOME</a>
+  </div>
 </body>
 
 </html>
