--- a/PUBLIC/other-pages/weeks/week-1.html
+++ b/PUBLIC/other-pages/weeks/week-1.html
@@ -2,6 +2,16 @@
  <html lang="en">
 
  <head>
+   <style>
+  html {
+    background: url(PUBLIC\other-pages\weeks\week-10\double-bubble-outline\double-bubble-outline\double-bubble-outline.png)
+      no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+</style>
    <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.4.0/build/styles/default.min.css">
    <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.4.0/build/highlight.min.js"></script>
    <meta charset="UTF-8">
@@ -14,7 +24,7 @@
    <!-- Custom & Default Styles -->
    <link rel="stylesheet" href="./../../css/bootstrap.min.css">
    <link rel="stylesheet" href="./../../css/font-awesome.min.css">
-
+<link rel="stylesheet" href="./../../css/bootstrap-theme.css">
    <link rel="stylesheet" href="./../../css/animate.css">
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width" , initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
@@ -23,7 +33,11 @@
 
    <script src="quiz.js"></script>
    <title>Week1</title>
- </head>
+
+</head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
  <body>
    <div id="home-link"> <a href="./../../index.html">HOME</a></div>
@@ -53,7 +67,11 @@
 
 
 
-   </head>
+
+</head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
    <body for="html-export">
      <div class="mume markdown-preview  ">
