--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|Oxygen:700" rel="stylesheet">
   <link rel="stylesheet" href="./landing-page/dist/css/style.css">
   <script src="https://unpkg.com/scrollreveal@4.0.5/dist/scrollreveal.min.js"></script>
+
 </head>
+
+<!-------------------------END-OF-HEADER-------------------------->
+
 
 <body class="is-boxed has-animations">
   <div class="body-wrap boxed-container">
