--- a/PUBLIC/index.html
+++ b/PUBLIC/index.html
@@ -388,7 +388,7 @@
                   <br />
                   <br />
                   <pre id="myCode"></pre>
-                  <div style="width: 560px; height: 315px; float: none; clear: both; margin: 2px auto;">
+                  <div style="width: 560px; height: 230px; float: center; clear: both; margin:  auto;">
                     <embed src="https://www.youtube-nocookie.com/embed/LiouJsnYytI" wmode="transparent" type="video/mp4"
                       width="720px" height="720px" allow="autoplay; encrypted-media; picture-in-picture"
                       allowfullscreen>
