--- a/PUBLIC/other-pages/weeks/week-9.html
+++ b/PUBLIC/other-pages/weeks/week-9.html
@@ -26,7 +26,7 @@
 
 
 <body>
-  <div id="btn-div-wraper" class="col-sm-4" >
+  <div id="btn-div-wraper" class="col-sm-4">
     <div id="redirect-btns-div" class="col-sm-4">
 
       <div class="section-button text-center">
@@ -65,8 +65,14 @@
     scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true"
     sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
 
-
-
+ <iframe src="./week-9/cheat-sheets/CSS_Selector_Cheat_Sheet_-_Dark.pdf" width="100%" height="500px">
+  </iframe>
+ <iframe src="./week-9/cheat-sheets/CSS-Cheat-Sheet.pdf" width="100%" height="500px">
+  </iframe>
+   <iframe src="./week-9/cheat-sheets/flexbox-cheatsheet.pdf" width="100%" height="500px">
+  </iframe>
+   <iframe src="./week-9/cheat-sheets/grid-cheatsheet.pdf" width="100%" height="500px">
+  </iframe>
 
 
   <div id="home-link2"> <a href="./../../index.html">HOME</a>
