added embeded google drive folder

--- a/PUBLIC/index.html
+++ b/PUBLIC/index.html
@@ -165,6 +165,7 @@
         <div class="home-message">
           <p>a/A Student Resources</p>
           <p><small>this site is student run and has no official association with a/A </small></p>
+
           <div class="btn-wrapper">
             <div class="text-center">
             </div>
@@ -191,15 +192,10 @@
               <hr class="invis">
               <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 first">
-                  <ul class="check">
-                    <li>github</li>
-                    <li>jsfundamentals</li>
-                    <li>data structures</li>
-                    <li>front end design</li>
-                    <li>back end engineering</li>
-                    <li>python data science</li>
-                    <li>professional skills</li>
-                  </ul><!-- end check -->
+                  <p>
+            <iframe src="https://drive.google.com/embeddedfolderview?id=1EfCng5gOQnftOM-4VESCBLbY4JgT2RVm#grid"
+              width="700" height="500" frameborder="0"></iframe>
+          </p>
                 </div><!-- end col-lg-4 -->
               </div><!-- end module -->
             </div><!-- end col -->
