--- a/PUBLIC/index.html
+++ b/PUBLIC/index.html
@@ -154,6 +154,7 @@
                 </ul>
               </li>
               <li><a href="page-contact.html">Contact</a></li>
+     <li><a href="./../index.html">Back To Landing Page</a></li>
             </ul>
           </div>
         </nav><!-- end navbar -->
