--- a/PUBLIC/other-pages/weeks/week-5.html
+++ b/PUBLIC/other-pages/weeks/week-5.html
@@ -35,7 +35,8 @@
     <iframe height="400px" width="100%" src="https://repl.it/@bgoonz/a-A-Student-Resources-Website-Prototype?lite=true"
         scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true"
         sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
-
+  <div id="connect-four"> <a class="button button-primary button-wide-mobile" href="./week-5\connect-4\index.html">play-connect-four</a>
+  </div>
   <div id="home-link2"> <a href="./../../index.html">HOME</a>
   </div>
 </body>
