--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
   <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|Oxygen:700" rel="stylesheet">
   <link rel="stylesheet" href="./landing-page/dist/css/style.css">
   <script src="https://unpkg.com/scrollreveal@4.0.5/dist/scrollreveal.min.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DD3R78E3TJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-DD3R78E3TJ');
+</script>
 </head>
 
 <!-------------------------END-OF-HEADER-------------------------->
