--- a/PUBLIC/index.html
+++ b/PUBLIC/index.html
@@ -102,6 +102,7 @@
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
               <li><a href="index.html">Home</a></li>
+                <li><a href="./blog.html">Blog</a></li>
               <li class="dropdown yamm-fw yamm-half"><a href="#" data-toggle="dropdown"
                   class="dropdown-toggle active">Weeks <b class="fa fa-angle-down"></b></a>
                 <ul class="dropdown-menu">
