--- a/PUBLIC/other-pages/weeks/week-10.html
+++ b/PUBLIC/other-pages/weeks/week-10.html
@@ -49,6 +49,9 @@
 
 
 <iframe height="400px" width="100%" src="https://repl.it/@bgoonz/week-10-take-2?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+ <iframe height="400px" width="100%" src="https://repl.it/@bgoonz/a-A-Student-Resources-Website-Prototype?lite=true"
+    scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true"
+    sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
   <center>
     <div id="DB-primer"> <a class="btn" href="./week-10/Database+Primer.html">Data Base
         Primer</a></div>
