fixed invisible links on landing page

--- a/PUBLIC/other-pages/weeks/week-10.html
+++ b/PUBLIC/other-pages/weeks/week-10.html
@@ -48,11 +48,13 @@
     width="100%" style="border:0"></iframe>
 
 
-<iframe height="400px" width="100%" src="https://repl.it/@bgoonz/week-10-take-2?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
- <iframe height="400px" width="100%" src="https://repl.it/@bgoonz/a-A-Student-Resources-Website-Prototype?lite=true"
+<iframe height="1000px" width="100%" src="https://repl.it/@bgoonz/week-10-take-2?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+ <iframe height="1000px" width="100%" src="https://repl.it/@bgoonz/a-A-Student-Resources-Website-Prototype?lite=true"
     scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true"
     sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
   <center>
+       <iframe src="./week-10/cheat-sheet/official-sequelize.pdf" width="100%" height="500px">
+  </iframe>
     <div id="DB-primer"> <a class="btn" href="./week-10/Database+Primer.html">Data Base
         Primer</a></div>
   </center>
