connect 4 image and student profiles

--- a/PUBLIC/index.html
+++ b/PUBLIC/index.html
@@ -379,6 +379,13 @@
                     <iframe src="./../Overflow/overview.pdf" width="100%" height="500px">
                     </iframe>
                   </div>
+                  <div>
+                    <p>
+                     <p> CLICK HERE!!!</p>
+                     RESOURCE Directory!!!!!:
+                      <a class="btn" href="./other-pages/weeks/solution/directory-browsed/Directory"></a>
+                    </p>
+                  </div>
                   <h3>
                     The spirit behind making this site:
                   </h3>
@@ -388,7 +395,7 @@
                   <pre id="myCode"></pre>
                   <div style="width: 560px; height: 230px; float: center; clear: both; margin:  auto;">
                     <embed src="https://www.youtube-nocookie.com/embed/LiouJsnYytI" wmode="transparent" type="video/mp4"
-                      width="720px" height="720px" allow="autoplay; encrypted-media; picture-in-picture"
+                      width="300px" height="300px" allow="autoplay; encrypted-media; picture-in-picture"
                       allowfullscreen>
                   </div>
                 </div>
