--- a/PUBLIC/blog.html
+++ b/PUBLIC/blog.html
@@ -41,7 +41,7 @@
             <a class="nav-link" href="#">Student Profiles</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="./other-pages/blog-posts/0-projects/projects.html">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./page-contact.html">Contact</a>
