--- a/PUBLIC/other-pages/blog-posts/0-projects/projects.html
+++ b/PUBLIC/other-pages/blog-posts/0-projects/projects.html
@@ -85,9 +85,9 @@
         <div class="card mb-4">
           <img class="card-img-top" src="https://github.com/appacademy-starters/oop-connect-four/blob/master/images/connect-four.png" alt="Card image cap">
           <div class="card-body">
-            <h2 class="card-title">Big O</h2>
+            <h2 class="card-title">Connect Four</h2>
             <p class="card-text">A look into computational complexity and why we need to think in terms of Big O Notation</p>
-            <a class="btn" href="./../blog/catagories/Blog-Posts/big-o.html" class="btn btn-primary">Read More &rarr;</a>
+            <a class="btn" href="./../../weeks/week-5/connect-4/index.html" class="btn btn-primary">Read More &rarr;</a>
           </div>
 
         </div>
@@ -98,13 +98,13 @@
         </div>
             <!------------------------------------- Blog Post -------------------------------------->
         <div class="card mb-4">
-          <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+          <img class="card-img-top" src="https://lh3.googleusercontent.com/proxy/lzzDIPBE0D4lJoCEJIRyrwc1bbwArQmtiVtjWtUYLESDABxkF0Ah1hqSadMqSlg7GDBG_S8kbh8c9R3Wpru4A8ReiTaVurfBnQB66PfTNW0JjQoDbn9rRL1y_w" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
               nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
               possimus, veniam magni quis!</p>
-            <a class="btn" href="./../blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
+            <a class="btn" href="./web-audio-recorder/index.html" class="btn btn-primary">Read More &rarr;</a>
           </div>
 
         </div>
