--- a/PUBLIC/index.html
+++ b/PUBLIC/index.html
@@ -45,7 +45,7 @@
   <script async defer src="js/videobg.js"></script>
    <script async src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script async>window.jQuery || document.write('<script src="path/to/your/jquery_file.js"><\/script>')</script>
-
+<script async type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="ar6vbnoxetpke9s"></script>
 </head>
 
 <!-------------------------END-OF-HEADER-------------------------->
@@ -386,6 +386,7 @@
                   <div>
 
                   </div>
+
                   <div>
                     <p>
                      <p> CLICK HERE!!!</p>
