added site documentation/data

--- a/PUBLIC/blog.html
+++ b/PUBLIC/blog.html
@@ -435,6 +435,24 @@
   </div>
   <!------------------------------------- /.container -------------------------------------->
 
+  <!------------------------------------- Sitemap -------------------------------------->
+<div>
+<h3>
+Site Maps
+</h3>
+<div>        <a class="btn" href="./other-pages/documentation/Directory-Tree-Graph.html">Directory Tree Graph</a></div>
+<div>        <a class="btn" href="./other-pages/documentation/Force-Directed Crawl Diagram.html">Force-Directed Crawl Diagram</a></div>
+<div>        <a class="btn" href="./other-pages/documentation/Force-Directed Directory Tree Diagram.html">Force-Directed Directory Tree Diagram</a></div>
+
+
+
+
+
+</div>
+
+
+
+
   <!------------------------------------- Footer -------------------------------------->
   <footer class="py-5 bg-dark">
     <div class="container">
