--- a/PUBLIC/index.html
+++ b/PUBLIC/index.html
@@ -43,13 +43,14 @@
   <script async defer src="js/custom.js"></script>
   <!-- VIDEO BG PLUGINS -->
   <script async defer src="js/videobg.js"></script>
-   <script async src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script async>window.jQuery || document.write('<script src="path/to/your/jquery_file.js"><\/script>')</script>
-<script async type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="ar6vbnoxetpke9s"></script>
+  <script async src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script async>
+    window.jQuery || document.write( '<script src="path/to/your/jquery_file.js"><\/script>' )
+  </script>
+  <script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs"
+    data-app-key="ar6vbnoxetpke9s"></script>
 </head>
-
 <!-------------------------END-OF-HEADER-------------------------->
-
 
 <body>
   <!-- LOADER -->
@@ -70,7 +71,8 @@
             <div class="col-md-6 col-sm-6 text-left">
               <p>
                 <strong><i class="fa fa-phone"></i></strong> +551-254-5505 &nbsp;&nbsp;
-                <strong><i class="fa fa-envelope"></i></strong> <a class="btn" href=" https://mail.google.com/mail/u/0/h/ ">bryan.guner@gmail.com</a>
+                <strong><i class="fa fa-envelope"></i></strong> <a class="btn"
+                  href=" https://mail.google.com/mail/u/0/h/ ">bryan.guner@gmail.com</a>
               </p>
             </div><!-- end left -->
             <div class="col-md-6 col-sm-6 hidden-xs text-right">
@@ -104,8 +106,8 @@
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
               <li><a class="btn" href="index.html">HOME-hit-Refresh</a></li>
-                <li><a class="btn" href="./blog.html">Blog</a></li>
-                 <li><a class="btn" href="./../drawio-master/src/main/webapp/sandbox.html">SandBox</a></li>
+              <li><a class="btn" href="./blog.html">Blog</a></li>
+              <li><a class="btn" href="./../drawio-master/src/main/webapp/sandbox.html">SandBox</a></li>
               <li class="dropdown yamm-fw yamm-half"><a class="btn" href="#" data-toggle="dropdown"
                   class="dropdown-toggle active">Weeks <b class="fa fa-angle-down"></b></a>
                 <ul class="dropdown-menu">
@@ -115,30 +117,30 @@
                         <div class="col-md-6 col-sm-6">
                           <h4>Course Pages</h4>
                           <ul>
-                            <li><a  href="./other-pages/weeks/week-1.html">week 01</a></li>
-                            <li><a  href="./other-pages/weeks/week-2.html">week 02</a></li>
-                            <li><a  href="./other-pages/weeks/week-3.html">week 03</a></li>
-                            <li><a  href="./other-pages/weeks/week-4.html">week 04</a></li>
-                            <li><a  href="./other-pages/weeks/week-5.html">week 05</a></li>
-                            <li><a  href="./other-pages/weeks/week-6.html">week 06</a></li>
-                            <li><a  href="./other-pages/weeks/week-7.html">week 07</a></li>
-                            <li><a  href="./other-pages/weeks/week-8.html">week 08</a></li>
-                            <li><a  href="./other-pages/weeks/week-9.html">week 09</a></li>
-                            <li><a  href="./other-pages/weeks/week-10.html">week 10</a></li>
-                            <li><a  href="./other-pages/weeks/week-11.html">week 11</a></li>
-                            <li><a  href="./other-pages/weeks/week-12.html">week 12</a></li>
-                            <li><a  href="./other-pages/weeks/week-13.html">week 13</a></li>
-                            <li><a  href="./other-pages/weeks/week-14.html">week 14</a></li>
-                            <li><a  href="./other-pages/weeks/week-15.html">week 15</a></li>
-                            <li><a  href="./other-pages/weeks/week-16.html">week 16</a></li>
-                            <li><a  href="./other-pages/weeks/week-17.html">week 17</a></li>
-                            <li><a  href="./other-pages/weeks/week-18.html">week 18</a></li>
-                            <li><a  href="./other-pages/weeks/week-19.html">week 19</a></li>
-                            <li><a  href="./other-pages/weeks/week-20.html">week 20</a></li>
-                            <li><a  href="./other-pages/weeks/week-21.html">week 21</a></li>
-                            <li><a  href="./other-pages/weeks/week-22.html">week 22</a></li>
-                            <li><a  href="./other-pages/weeks/week-23.html">week 23</a></li>
-                            <li><a  href="./other-pages/weeks/week-24.html">week 24</a></li>
+                            <li><a href="./other-pages/weeks/week-1.html">week 01</a></li>
+                            <li><a href="./other-pages/weeks/week-2.html">week 02</a></li>
+                            <li><a href="./other-pages/weeks/week-3.html">week 03</a></li>
+                            <li><a href="./other-pages/weeks/week-4.html">week 04</a></li>
+                            <li><a href="./other-pages/weeks/week-5.html">week 05</a></li>
+                            <li><a href="./other-pages/weeks/week-6.html">week 06</a></li>
+                            <li><a href="./other-pages/weeks/week-7.html">week 07</a></li>
+                            <li><a href="./other-pages/weeks/week-8.html">week 08</a></li>
+                            <li><a href="./other-pages/weeks/week-9.html">week 09</a></li>
+                            <li><a href="./other-pages/weeks/week-10.html">week 10</a></li>
+                            <li><a href="./other-pages/weeks/week-11.html">week 11</a></li>
+                            <li><a href="./other-pages/weeks/week-12.html">week 12</a></li>
+                            <li><a href="./other-pages/weeks/week-13.html">week 13</a></li>
+                            <li><a href="./other-pages/weeks/week-14.html">week 14</a></li>
+                            <li><a href="./other-pages/weeks/week-15.html">week 15</a></li>
+                            <li><a href="./other-pages/weeks/week-16.html">week 16</a></li>
+                            <li><a href="./other-pages/weeks/week-17.html">week 17</a></li>
+                            <li><a href="./other-pages/weeks/week-18.html">week 18</a></li>
+                            <li><a href="./other-pages/weeks/week-19.html">week 19</a></li>
+                            <li><a href="./other-pages/weeks/week-20.html">week 20</a></li>
+                            <li><a href="./other-pages/weeks/week-21.html">week 21</a></li>
+                            <li><a href="./other-pages/weeks/week-22.html">week 22</a></li>
+                            <li><a href="./other-pages/weeks/week-23.html">week 23</a></li>
+                            <li><a href="./other-pages/weeks/week-24.html">week 24</a></li>
                           </ul>
                         </div>
                         <div class="col-md-6 col-sm-6">
@@ -158,7 +160,7 @@
                 </ul>
               </li>
               <li><a class="btn" href="page-contact.html">Contact</a></li>
-     <li><a class="btn" href="./../index.html">Back To Landing Page</a></li>
+              <li><a class="btn" href="./../index.html">Back To Landing Page</a></li>
             </ul>
           </div>
         </nav><!-- end navbar -->
@@ -168,10 +170,8 @@
       <div class="overlay"></div>
       <div class="home-text-wrapper relative container">
         <div class="home-message">
-
           <p>a/A Student Resources</p>
           <p><small>this site is student run and has no official association with a/A </small></p>
-
           <div class="btn-wrapper">
             <div class="text-center">
             </div>
@@ -199,9 +199,9 @@
               <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 first">
                   <p>
-            <iframe src="https://drive.google.com/embeddedfolderview?id=1EfCng5gOQnftOM-4VESCBLbY4JgT2RVm#grid"
-              width="700" height="500" frameborder="0"></iframe>
-          </p>
+                    <iframe src="https://drive.google.com/embeddedfolderview?id=1EfCng5gOQnftOM-4VESCBLbY4JgT2RVm#grid"
+                      width="700" height="500" frameborder="0"></iframe>
+                  </p>
                 </div><!-- end col-lg-4 -->
               </div><!-- end module -->
             </div><!-- end col -->
@@ -229,7 +229,8 @@
                   <div class="course-details">
                     <h4>
                       <small>general comp-sci</small>
-                      <a class="btn" href="./other-pages/blog-posts/9-thigs-you-should-know-about/What every computer science major should know.html"
+                      <a class="btn"
+                        href="./other-pages/blog-posts/9-thigs-you-should-know-about/What every computer science major should know.html"
                         title="">Click
                         Here!!</a>
                     </h4>
@@ -259,7 +260,8 @@
                   <div class="course-details">
                     <h4>
                       <small>Javascript</small>
-                      <a class="btn" href="./other-pages/blog-posts/best-prac-extension-guide/js-tools-and-best-prac.html"
+                      <a class="btn"
+                        href="./other-pages/blog-posts/best-prac-extension-guide/js-tools-and-best-prac.html"
                         title="">Click
                         Here!!</a>
                     </h4>
@@ -290,7 +292,8 @@
                   <div class="course-details">
                     <h4>
                       <small>HTML</small>
-                      <a class="btn" href="./other-pages/blog-posts/best-prac-extension-guide/Design-Principles/HTML-Design-Principles.html"
+                      <a class="btn"
+                        href="./other-pages/blog-posts/best-prac-extension-guide/Design-Principles/HTML-Design-Principles.html"
                         title="">Click Here!!</a>
                     </h4>
                     <p>Solid HTML Design Principles</p>
@@ -384,17 +387,15 @@
                     </iframe>
                   </div>
                   <div>
-
                   </div>
-
                   <div>
                     <p>
-                     <p> CLICK HERE!!!</p>
-                     RESOURCE Directory!!!!!:
-                      <a class="btn" href="./other-pages/weeks/solution/directory-browsed/Directory/"></a>
+                    <p> CLICK HERE!!!</p>
+                    RESOURCE Directory!!!!!:
+                    <a class="btn" href="https://www.dropbox.com/sh/0gd7qly5zaskh3d/AACTCwplGa-RnwtcDBb3cUdTa?dl=0"
+                      class="dropbox-embed"></a>
                     </p>
                   </div>
-
                   <h3>
                     The spirit behind making this site:
                   </h3>
@@ -406,6 +407,11 @@
                     <embed src="https://www.youtube-nocookie.com/embed/LiouJsnYytI" wmode="transparent" type="video/mp4"
                       width="300px" height="300px" allow="autoplay; encrypted-media; picture-in-picture"
                       allowfullscreen>
+ <div style="width: 560px; height: 230px; float: center; clear: both; margin:  auto;"></div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/7EmboKQH8lM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  </div>
+
+
                   </div>
                 </div>
               </div>
@@ -414,8 +420,8 @@
         </section>
       </div>
     </section>
-    </div>
-      <!--------------------------------------------White Space------------------------------------------------------>
+  </div>
+  <!--------------------------------------------White Space------------------------------------------------------>
   <p>
   <p>
   <p>
@@ -426,27 +432,33 @@
     <br>
     <br>
     <br>
-
   </p>
   </p>
   </p>
   </p>
   </p>
   <!--------------------------------------------White Space------------------------------------------------------>
-    <section id="gitrepo">
+  <section id="gitrepo">
     <div>
-    <!-- <script async type = "text/javascript"
+      <!-- <script async type = "text/javascript"
          src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
       </script> -->
       <script src="./other-pages/weeks/solution/repojs-embed/repo.js"></script>
       <script>
-        $('body').repo({ user: 'bgoonz', name: 'weeks', branch: 'master' })
-        console.log(" $('body').repo({ user: 'bgoonz', name: 'weeks', branch: 'master' }): ",  $('body').repo({ user: 'bgoonz', name: 'weeks', branch: 'master' }));
-
+        $( 'body' ).repo( {
+          user: 'bgoonz',
+          name: 'weeks',
+          branch: 'master'
+        } )
+        console.log( " $('body').repo({ user: 'bgoonz', name: 'weeks', branch: 'master' }): ", $( 'body' ).repo( {
+          user: 'bgoonz',
+          name: 'weeks',
+          branch: 'master'
+        } ) );
       </script>
-      </div>
-      </section>
-        <!--------------------------------------------White Space------------------------------------------------------>
+    </div>
+  </section>
+  <!--------------------------------------------White Space------------------------------------------------------>
   <p>
   <p>
   <p>
@@ -457,14 +469,12 @@
     <br>
     <br>
     <br>
-
   </p>
   </p>
   </p>
   </p>
   </p>
   <!--------------------------------------------White Space------------------------------------------------------>
-
 </body>
 
 </html>
