--- a/PUBLIC/other-pages/weeks/week-10.html
+++ b/PUBLIC/other-pages/weeks/week-10.html
@@ -52,6 +52,14 @@
  <iframe height="1000px" width="100%" src="https://repl.it/@bgoonz/a-A-Student-Resources-Website-Prototype?lite=true"
     scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true"
     sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+
+    <center>
+       <iframe src="./week-10/cheat-sheet/Master-Cheat-Sheet.pdf" width="100%" height="500px">
+  </iframe>
+    <div id="DB-primer"> <a class="btn" href="./week-10/Database+Primer.html">Master Cheat Sheet</a></div>
+  </center>
+
+
   <center>
        <iframe src="./week-10/cheat-sheet/official-sequelize.pdf" width="100%" height="500px">
   </iframe>
