added discord Server widget

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                       <div class="hero-cta">
                       <a class="btn"  href=" ./PUBLIC\other-pages\blog-posts\blog\catagories\Cheat-Sheets\000-Link-cTy-bTy\ALL-HTML-Cht-sht\book-pages\z-D-TREE.html">Cheat-Sheets(hit refresh)</a>
                     </div>
+                    <div>
+<iframe src="https://discord.com/widget?id=787149022699847700&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+</div>
                   </div>
                 </div>
               </div>
