--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
     </footer>
   </div>
   <script src="./landing-page/dist/js/main.min.js"></script>
+<script async src="http://gist-it.appspot.com/https://github.com/bgoonz/weeks.git"></script>
 </body>
 
 </html>
