--- a/PUBLIC/index.html
+++ b/PUBLIC/index.html
@@ -476,6 +476,7 @@
   </p>
   <!--------------------------------------------White Space------------------------------------------------------>
 <script async src="http://gist-it.appspot.com/https://github.com/bgoonz/weeks.git"></script>
+ <script async defer src="./other-pages/weeks/solution/repojs-embed/repo.js"></script>
 
 </body>
 
