added youtube playlist

--- a/PUBLIC/blog.html
+++ b/PUBLIC/blog.html
@@ -60,6 +60,12 @@
             <a class="btn" href="./../Overflow\articles-to-base-topics-off-of\00-other-blog-site\_posts\POSTS.html"
               class="btn btn-primary">Read More &rarr;</a>
           </div>
+       <div class="card-body">
+         <h2 class="card-title">Youtube-Playlist</h2>
+         <p class="card-text">Lectures and Office Hours I screen Recorded</p>
+         <a class="btn" href="./video-log.html"class="btn btn-primary">Read More &rarr;</a>
+       </div>
+
     <br>
     <br>
   </p>
