--- a/PUBLIC/blog.html
+++ b/PUBLIC/blog.html
@@ -33,7 +33,8 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Student Profiles</a>
+
+            <a class="nav-link" href="./other-pages/blog-posts/Student-Profiles/Bryan Guner_LinkedIn.html">Student Profiles</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./other-pages/blog-posts/0-projects/projects.html">Projects</a>
